# vimsite

./: .assetsignore  .claudeignore  .gitignore  .stylelintrc.json  CLAUDE.md  README.md  _headers  eslint.config.mjs  gnss-station.html  gnss.html  index.html  lighthouserc.json  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
.github/workflows/: auto-format.yml  claude-review.yml  lighthouse.yml  pages.yml
assets/css/: style.css
assets/data/: borders-110m.json
assets/js/: editor.js  gnss-dopplot.js  gnss-hud.js  gnss-skyplot.js  main.js
assets/wasm/gnss-constellation/: gnss_constellation.d.ts  gnss_constellation.js  gnss_constellation_bg.wasm  gnss_constellation_bg.wasm.d.ts
posts/: entry-number-one.html  hello-world.html  illinois-kolache-five-centuries-of-fi.html  lorem-ipsum-spoken-five.html  lorem-ipsum-spoken-one.html  lorem-ipsum-spoken-three.html  lorem-ipsum-written-four.html  lorem-ipsum-written-two.html  test-drone-nav.html  test-mtg-bot.html  test-pension-data.html  test-post-number-two.html  test-post-three.html  test-wasm-viz.html  why-are-people-buying-mac-minis-and-mac-studio-pro.html
scripts/: check-html-scripts.js
src/: editor.ts  globals.d.ts  main.ts  worker.js
viz/gnss-constellation/: Cargo.toml
viz/gnss-constellation/src/: borders.rs  coords.rs  dop.rs  ground.rs  lib.rs  tles.rs
