[package]
name = "gnss-constellation"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
sgp4 = { version = "2.3", default-features = false, features = ["libm"] }
three-d = "0.18"
glam = { version = "0.29", features = ["std"] }
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-net = { version = "0.6", features = ["http"] }
web-sys = { version = "0.3", features = [
  "Window", "Document", "Element",
  "HtmlCanvasElement", "CanvasRenderingContext2d",
] }

[profile.release]
opt-level = "z"
lto = true
