[package]
name = "gnss-constellation"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
sgp4 = { version = "2.3", default-features = false, features = ["libm"] }
three-d = "0.18"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-net = { version = "0.6", features = ["http"] }
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlCanvasElement"] }
js-sys = "0.3"
serde = { version = "1", default-features = false, features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
chrono = { version = "0.4", default-features = false }

[profile.release]
opt-level = "z"
lto = true
